# esserini

./: .gitignore  CMakeLists.txt  LICENSE  README.md  datastructures.h
scripts/: plotstat.m  plotstat.sc
src/: datastructures.h  goodness.cc  instructions.cc  instructions.h  instructions_impl.h  main.cc  mondo.cc  monster.cc
wiki/: EsseriniMainPage.wiki  Instructions.wiki
